<resources>
    <string name="app_name">ToDolities</string>
    <string name="signInLabel">Sign In</string>
    <string name="registerLabel">Register</string>
    <string name="hintPassword">Password</string>
    <string name="hintEmail">Email</string>
    <string name="hintGitHubEmail">GitHub Email</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="createAccount">Create Account</string>
    <string name="loginLabel">Already Have an Account?</string>
    <string name="reenterPassword">Reenter Password</string>
    <string name="addNote">Add New Note</string>
    <string name="editNote">Edit Note</string>
    <string name="deleteNote">Delete Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="incrementTitle">Increment Tool</string>
    <string name="randomGenTitle">Random Number Generator 0-1000</string>
    <string name="KGtoPoundsTitle">Kilograms/Pounds Converter</string>
    <string name="kilograms">Kilograms</string>
    <string name="pounds">Pounds</string>
    <string name="CelsiusToFahrenheitTitle">Celsius/Fahrenheit Converter</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>