<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".NoteDetails">

    <RelativeLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addNote"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <ImageButton
            android:id="@+id/save_note_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_baseline_save_24"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/note_details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/title_bar_layout"
        android:padding="16dp"
        android:layout_marginVertical="30dp">


        <EditText
            android:id="@+id/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"
            android:padding="12dp"/>

        <EditText
            android:id="@+id/note_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textSize="20sp"
            android:gravity="top"
            android:layout_marginVertical="10dp"
            android:padding="12dp"
            android:minLines="10"/>
    </LinearLayout>

    <TextView
        android:id="@+id/delete_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteNote"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textSize="20sp"
        android:visibility="gone"
        android:textColor="#FF0000"/>


</RelativeLayout>