<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".RegisterActivity">

    <!--REGISTER LABEL -->
    <TextView
        android:id="@+id/registerLabel"
        style="@style/TEXT"
        android:layout_width="325dp"
        android:layout_height="75dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/registerLabel"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- This is the ConstraintLayout the holds the EditText Fields. -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userInfoConstraint"
        android:layout_width="390dp"
        android:layout_height="425dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerLabel">

        <!--User Enters Email -->
        <EditText
            android:id="@+id/user_name"
            style="@style/TEXT"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="#dcdcde"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#616161"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--User Enters Password -->
        <EditText
            android:id="@+id/userPassword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:autofillHints=""
            android:background="#dcdcde"
            android:drawableStart="@drawable/ic_baseline_key_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#616161"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <!--User Verifies Password -->
        <EditText
            android:id="@+id/userVerifyPassword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:autofillHints=""
            android:background="#dcdcde"
            android:drawableStart="@drawable/ic_baseline_key_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/reenterPassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#616161"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPassword" />

        <!--Register Button -->
        <Button
            android:id="@+id/registerButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:backgroundTint="#45C1A8"
            android:onClick="buttonOnClick"
            android:text="@string/createAccount"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userVerifyPassword"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <!-- This lines up the the Login TextViews Together /-->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="366dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerButton">

            <!-- This displays the text before "Register Now" /-->
            <TextView
                android:id="@+id/loginText"
                style="@style/TEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:text="@string/loginLabel"
                app:layout_constraintEnd_toStartOf="@+id/loginPrompt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerButton" />

            <!-- This displays the text the user has to click to create an account. /-->
            <TextView
                android:id="@+id/loginPrompt"
                style="@style/TEXT"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="100dp"
                android:onClick="loginOnClick"
                android:text="@string/signInLabel"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteY="299dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>