<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".MainActivity">

    <!--SIGN IN LABEL -->
    <TextView
        android:id="@+id/signInLabel"
        style="@style/TEXT"
        android:layout_width="325dp"
        android:layout_height="75dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- This is holds the username, password, Login/Register Prompts/-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userInfoConstraint"
        android:layout_width="390dp"
        android:layout_height="450dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInLabel">

        <!--User Enters Email -->
        <EditText
            android:id="@+id/user_name"
            android:textColor="@color/black"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="#dcdcde"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#616161"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--User Enters Password -->
        <EditText
            android:id="@+id/userPassword"
            android:textColor="@color/black"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:autofillHints=""
            android:background="#dcdcde"
            android:drawableStart="@drawable/ic_baseline_key_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#616161"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />


        <!--Sign In Button -->
        <Button
            android:id="@+id/signInButton"
            style="@style/positive_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#45C1A8"
            android:onClick="buttonOnClick"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPassword" />

        <!-- This lines up the the TextViews Together /-->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="366dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInButton">

            <!-- This displays the text before "Register Now" /-->
            <TextView
                android:id="@+id/registerText"
                style="@style/TEXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:text="Don't have an account?"
                app:layout_constraintEnd_toStartOf="@+id/registerTextPrompt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInButton" />

            <!-- This displays the text the user has to click to create an account. /-->
            <TextView
                android:id="@+id/registerTextPrompt"
                style="@style/TEXT"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="100dp"
                android:onClick="buttonOnClick"
                android:text="Register Now"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TouchTargetSizeCheck"
                tools:layout_editor_absoluteY="299dp" />
        </LinearLayout>

        <!-- This is the Google SignIn Button, that the user interacts with to sign-in with google. /-->
        <ImageView
            android:id="@+id/google_signIn_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="132dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.51"
            app:srcCompat="@drawable/common_google_signin_btn_icon_light" />

        <!-- This is the GITHUB SignIn Button. /-->
        <ImageView
            android:id="@+id/github_signIn_logo"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/google_signIn_logo"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.505"
            app:srcCompat="@drawable/github_mark"
            app:tint="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>